# react-native-dilithium5aes

./: .gitmodules  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-dilithium5aes.podspec  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
Dilithium5AES.xcframework/: Info.plist
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/dilithium5aes/: Dilithium5aesModule.java  Dilithium5aesPackage.java
cpp/: TypedArray.cpp  TypedArray.h  react-native-dilithium5aes.cpp  react-native-dilithium5aes.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/com/dilithium5aesexample/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: .xcode.env.local  File.swift  Podfile
example/ios/Dilithium5aesExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/Dilithium5aesExample.xcodeproj/: project.pbxproj
example/ios/Dilithium5aesExample.xcodeproj/xcshareddata/xcschemes/: Dilithium5aesExample.xcscheme
example/ios/Dilithium5aesExample.xcworkspace/: contents.xcworkspacedata
example/ios/Dilithium5aesExampleTests/: Dilithium5aesExampleTests.m
example/src/: App.tsx
example/src/components/: button.tsx  card.tsx  text-field.tsx
ios/: Dilithium5aes.h  Dilithium5aes.mm
src/: NativeDilithium5aes.ts  index.tsx
